@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o Fixed an issue where TCP Connect scan (-sT) on Windows would fail to open any
+  sockets, leading to scans that never finish. [Daniel Miller]
+
 o [NSE] Fixed DNS TXT record parsing which caused asn-query to fail in Nmap
   7.80 and later. [David Fifield, Mike Pattrick]
 
